syntax = "proto3";

package ammo;

option go_package = ".";

//Message to request ammo
message AmmoReq{
    int32 team = 1;
    int32 at = 2;
    int32 np = 3;
}

//Message to respond ammo
message AmmoResp{
    bool app = 1;
    int32 av_at = 2;
    int32 av_np = 3;
}

//Service for communication between clients and server
service Ammo{
    rpc ReqAmmo(AmmoReq) returns (AmmoResp);
}